small fix so >3 sources will wrap on mod pages

--- a/mod-picker/app/assets/stylesheets/pages/showMod.scss
+++ b/mod-picker/app/assets/stylesheets/pages/showMod.scss
@@ -57,6 +57,7 @@
   justify-content: flex-start;
   align-items: center;
   align-content: center;
+  flex-wrap: wrap;
 }
 
 .requirements-list {
